# bounty-bet

./: .gitignore  Anchor.toml  Cargo.toml  Cargo.toml.backup  DEPLOYMENT.md  README.md  fix-idl-cache.sh  fix-idl.sh  fix-versions.sh  package-lock.json  package.json
client/: .env.example  index.html  package.json  package.json.backup  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css  vite-env.d.ts
client/src/components/: Navbar.tsx
client/src/contexts/: DiceGameContext.tsx
client/src/idl/: dice_game.json  dice_game.json.backup-20251121-143912  vault_betting.json
client/src/lib/: anchorProgram.ts  useDiceGame.ts
client/src/pages/: DiceGamePage.tsx  DiceModeSelectorPage.tsx  DiceMultiplayerPage.tsx  HomePage.tsx  MyBetsPage.tsx
contracts/: package.json
contracts/programs/dice_game/: Cargo.toml
contracts/programs/dice_game/src/: lib.rs
contracts/programs/vault_betting/: Cargo.toml
contracts/programs/vault_betting/src/: lib.rs
programs/dice_game/: Cargo.toml  Cargo.toml.backup
programs/dice_game/src/: instructions.rs  lib.rs  state.rs
programs/dice_game/src/instructions/: claim_prize.rs  create_game.rs  emergency_withdraw.rs  finalize_game.rs  join_game.rs  roll_dice.rs  start_game.rs
tests/: vault-betting.ts
