[package]
name = "dice_game"
version = "0.1.0"
description = "Trustless dice game with automatic prize distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dice_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"