[package]
name = "vault_betting"
version = "1.0.0"
description = "Decentralized Betting Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_betting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"